@@ -11,4 +11,4 @@ var:
       - "c:/program files/Redis/logs/redis.log*"
 
 ingest_pipeline: ingest/pipeline.json
-prospector: config/log.yml
+input: config/log.yml
